Fixed all the FindBugs warnings